--- a/css/main.css
+++ b/css/main.css
@@ -108,3 +108,16 @@ h4{
 	font-size:1.2em;
 	
 }
+
+.offers-comparison .delete-offer{
+	display: inline-block;
+	width:16px;
+	height:16px;
+	background: url(../img/remove.png) no-repeat 0 0;
+	margin-left:7px;
+	margin-top:4px;
+}
+
+.offers-comparison .delete-offer:hover{
+	background-position:0 bottom;
+}
