--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ h4{
 	bottom: -55px;
 	display: none;
 	width: 200px;
-	margin-left: 35px;
+	margin-left: 30px;
 }
 
 .credit-offers>div:hover .add-to-compare{
@@ -147,7 +147,6 @@ h4{
 .terms-container>div{
     border:1px solid #FFCA15;
 	border-radius:5px;
-	padding:10px 5px 5px;
 	background:#FFF5C5;
 }
 
@@ -196,6 +195,10 @@ h4{
 }
 
 
+.flip-inner{
+	padding:10px 5px;
+}
+
 
 
 
@@ -207,4 +210,26 @@ a.rotate{
 	position:absolute;
 	bottom:0;
 	right:0;
+}
+
+.control-group table input{
+	margin:0;
+}
+
+
+.control-group table{
+	width:100%;
+	vertical-align:bottom;
+}
+
+
+.control-group td{
+	vertical-align:bottom;
+}
+
+
+.control-group td.input{
+	width:120px;
+	white-space:nowrap;
+	padding-left:10px;
 }
