--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,12 @@ body{
 
 h4{
 	margin-top:20px;
+	
+	font-size:24px;
+	line-height:40px;
+	font-weight:300;
+	
+	margin:25px 0 5px 0;
 }
 
 
@@ -37,6 +43,9 @@ h4{
 }
 
 
+.credit-offers{
+	height:370px;
+}
 
 .credit-offers>div{
 	padding-bottom:50px;
@@ -51,14 +60,29 @@ h4{
 	font-size:14px;
 	line-height:22px;
 	font-weight:600;
-	text-align:center;
+	text-align:left;
+	
+	margin:5px 0 5px 0;
 
 }
+
+.credit-offer h4{
+	clear:both;
+	font-size:14px;
+	line-height:22px;
+	font-weight:normal;
+	text-align:left;
+	
+	margin:5px 0 5px 0;
+
+}
+
 
 .credit-offer .monthly-payment{
 	float:right;
 	display:block;
-	font-size:1.4em;
+	font-size:16px;
+	margin-bottom:10px;
 	color: #B28D0F;
 	font-weight:600;
 	
@@ -159,7 +183,7 @@ h4{
 
 .terms-container>div{
     border:1px solid #FFCA15;
-	border-radius:5px;
+	border-radius:3px;
 	background:#FFF5C5;
 }
 
@@ -214,7 +238,7 @@ h4{
 
 
 .flip-inner{
-	padding:10px;
+	padding:5px 10px 10px;
 }
 
 
