--- a/css/main.css
+++ b/css/main.css
@@ -259,10 +259,17 @@ h4{
 .flip-container {
 	perspective: 1000;
 	-webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
 }
 /* flip the pane when hovered */
 .flip-container.hover .terms-container {
 	-webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+
 }
 
 .flip-container, .terms-container, .main-terms, .extra-terms {
@@ -274,13 +281,23 @@ h4{
 .terms-container {
 	-webkit-transition: 0.3s;
 	-webkit-transform-style: preserve-3d;
+    -ms-transition: 0.3s;
+    -ms-transform-style: preserve-3d;
+    -o-transition: 0.3s;
+    -o-transform-style: preserve-3d;
+    -moz-transition: 0.3s;
+    -moz-transform-style: preserve-3d;
 
-	position: relative;
+
+    position: relative;
 }
 
 /* hide back of pane during swap */
 .main-terms, .extra-terms {
 	-webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
 
 	position: absolute;
 	top: 0;
@@ -289,6 +306,8 @@ h4{
 	
 	-webkit-box-shadow: 6px 8px 20px rgba(50, 50, 50, 0.5);
 	-moz-box-shadow:    6px 8px 20px rgba(50, 50, 50, 0.5);
+    -ms-box-shadow:    6px 8px 20px rgba(50, 50, 50, 0.5);
+    -o-box-shadow:    6px 8px 20px rgba(50, 50, 50, 0.5);
 	box-shadow:         6px 8px 20px rgba(50, 50, 50, 0.5);
 }
 
@@ -300,6 +319,9 @@ h4{
 /* back, initially hidden pane */
 .extra-terms {
 	-webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
 }
 
 
