--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -457,7 +457,7 @@
     margin-left: 0;
   }
 }
-
+/*
 @media (min-width: 768px) and (max-width: 979px) {
   .row {
     margin-left: -20px;
@@ -896,7 +896,7 @@
     top: 20px;
   }
 }
-
+*/
 @media (max-width: 480px) {
   .nav-collapse {
     -webkit-transform: translate3d(0, 0, 0);
@@ -948,7 +948,7 @@
     position: static;
   }
 }
-
+/*
 @media (max-width: 979px) {
   body {
     padding-top: 0;
@@ -1100,7 +1100,7 @@
     padding-left: 10px;
   }
 }
-
+*/
 @media (min-width: 980px) {
   .nav-collapse.collapse {
     height: auto !important;
