--- a/css/main.css
+++ b/css/main.css
@@ -442,45 +442,36 @@ a.rotate{
 
 .control-group .ui-slider-horizontal{
 	margin-top:5px;
-	height:7px;
+	height:9px;
 	border-radius:5px;
-	border-width:1px;
-	border-color:#ffc74f;
-background: #ffdea3; /* Old browsers */
-background: -moz-linear-gradient(top,  #ffdea3 1%, #ffebcc 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#ffdea3), color-stop(100%,#ffebcc)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #ffdea3 1%,#ffebcc 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #ffdea3 1%,#ffebcc 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #ffdea3 1%,#ffebcc 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #ffdea3 1%,#ffebcc 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffdea3', endColorstr='#ffebcc',GradientType=0 ); /* IE6-9 */
-
-
-
-
+	border:0;
+	background:url(../img/slider.png) no-repeat top right;
 
 }
+
+.control-group .ui-slider-horizontal .ui-slider-range{
+	background:url(../img/slider.png) no-repeat bottom right;
+	padding:0;
+}
+
 
 .control-group .ui-slider-horizontal a{
-	width:12px;
-	height:12px;
-	border-radius:50%;
-	border:2px ridge #fdb417;
+	width:20px;
+	height:20px;
+	margin:-1px 0 0 -10px;
+	padding:0;
+	border:0;
 	
 
-background: #f9b939; /* Old browsers */
-background: -moz-linear-gradient(top,  #f9b939 12%, #f9d89a 97%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(12%,#f9b939), color-stop(97%,#f9d89a)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #f9b939 12%,#f9d89a 97%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #f9b939 12%,#f9d89a 97%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #f9b939 12%,#f9d89a 97%); /* IE10+ */
-background: linear-gradient(to bottom,  #f9b939 12%,#f9d89a 97%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9b939', endColorstr='#f9d89a',GradientType=0 ); /* IE6-9 */
-
+background: url(../img/slider_handler.png) no-repeat
+	
 	
 	
 }
 
+.control-group .ui-slider-horizontal a:focus{
+	outline:0;
+}
 
 .form-inline div select{
 	width:100%;
