--- a/css/print.css
+++ b/css/print.css
@@ -31,7 +31,7 @@
 	
 	table tr td,table tr th{
 		border:1px solid #ccc;
-		border-width:0 1px;
+		border-width:0 1px 0 0;
 		
 		
 		padding:5px 10px;
@@ -43,19 +43,14 @@
 	   border-collapse:collapse;
 	}
 	
-	table tr:first-child td,table tr:first-child th{
-		border:0;
-	}
 	
 	
-	table tr th{
+	table tr th, table tr td{
 		text-align:left;
+		font-weight:normal;
 	}
 	
 	
-	table tr td{
-		text-align:left;
-	}
 	
 	.offer-name td{
 		font-weight:bold;
@@ -77,8 +72,7 @@
 	table{
 	}
 	
-	.group th, .group td{
+	table tr.group th, table tr.group td{
 		padding-top:20px;
-		/*border-left:0;
-		border-right:0;*/
+		font-weight:bold;
 	}
