--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic);
 
 
-
+.print{
+	display:none;
+}
 
 body{
 	padding-bottom:100px;
