--- a/css/main.css
+++ b/css/main.css
@@ -550,7 +550,7 @@ select option:checked, select option[selected]{
 	margin: 1px 6px 2px;
 	padding: 3px 6px;
 	background: url("../img/border-bottom.gif") 50% 100% repeat-x;
-	color: #348db5;
+	color: #001c8f;
 	font-size: 14px;
 	font-weight: bold;
 	
@@ -559,14 +559,14 @@ select option:checked, select option[selected]{
 .btn-group>.btn.active{
 
 		
-	background: #287ba0; /* Old browsers */
-	background: -moz-linear-gradient(top,  #287ba0 0%, #3e9dc5 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#287ba0), color-stop(100%,#3e9dc5)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #287ba0 0%,#3e9dc5 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #287ba0 0%,#3e9dc5 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #287ba0 0%,#3e9dc5 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #287ba0 0%,#3e9dc5 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#287ba0', endColorstr='#3e9dc5',GradientType=0 ); /* IE6-9 */
+background: #0024b7; /* Old browsers */
+background: -moz-linear-gradient(top,  #0024b7 0%, #8b98c6 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0024b7), color-stop(100%,#8b98c6)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #0024b7 0%,#8b98c6 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #0024b7 0%,#8b98c6 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #0024b7 0%,#8b98c6 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #0024b7 0%,#8b98c6 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0024b7', endColorstr='#8b98c6',GradientType=0 ); /* IE6-9 */
 
 	border:1px solid #25698a;
 	border-color:#25698a #358fb5 #409fc7 #1e6a90;
