--- a/css/main.css
+++ b/css/main.css
@@ -1,593 +1,223 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic);
-
-
-.print{
-	display:none;
+html,body{
+    width:100%;
+    height:100%
 }
+
 
 body{
-	padding-bottom:100px;
-	padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-	
-	font-family: 'Open Sans', sans-serif;
-	
-	
-	/*background: #e0e0e0 url(../img/bg.jpg) no-repeat fixed;
-	background-size:100% auto; */
-	
-	background: #f7f7f7 url(../img/portal_bg.png) repeat-x;
-
-	min-width:960px;
+    font-family: 'Open Sans', sans-serif;
+    font-size:14px;
+    line-height: 1.6;
 }
 
 
-
-body, input, select, textarea{
-	color: #605525;
-
-}
-
-h4{
-	
-	font-size:24px;
-	line-height:40px;
-	font-weight:400;
-	
-	margin:25px -5px 10px -5px;
-	padding:0 5px;
-	
-	
-	/*color:#287ba0;*/
-background: rgb(0, 28, 143);
-color: #fff;
-
-	
-
-}
-
-
-.prices{
-	position:relative;
-	width:300px;
-}
-
-
-.car-total{
-	border-top:1px solid #ccc;
-}
-
-
-.component-price{
-
-
-	text-align:right;
-	left:150px;
-	width:150px;
-	position:absolute;
-
-}
-
-
-.credit-offers{
-	height:395px;
-	overflow:hidden;
-	padding-right:20px;
-	padding-left:20px;
-	margin-left:-20px
-}
-
-.credit-offers>div{
-	padding-bottom:70px;
-}
-
-
-.clearfix{
-	clear:both; 
-}
-
-
-.credit-offer h3{
-
-	font-size:14px;
-	line-height:22px;
-	font-weight:600;
-	text-align:left;
-padding-right:25px;	
-	margin:5px 0 5px 0;
-
-}
-
-.credit-offer h4{
-	clear:both;
-	font-size:14px;
-	line-height:22px;
-	font-weight:normal;
-	text-align:left;
-	
-	margin:5px 0 5px 0;
-	color:#333;
-
-}
-
-
-.credit-offer .monthly-payment{
-	float:right;
-	display:block;
-	font-size:16px;
-	margin-bottom:10px;
-	color: #B28D0F;
-	font-weight:600;
-	
-}
-
-.credit-offer .monthly-payment small{
-	font-size:0.5em;
-}
-
-
-.credit-offer .options-list{
-	overflow-y:auto;
-	height:150px;
-	margin-top:10px;
-	padding-right: 5px;
-	margin-right: -5px;
+h1,h2,h3,h4{
+    font-weight: 300;
 }
 
-.credit-offer .options-list label{
-	font-size:12px;
-}
-
-
-
-.credit-offer .options-list .option{
-	position:relative;
-}
-
-
-.credit-offer .options-list .option, .credit-offer .options-list .checkbox{
-	height:26px;
-	line-height:26px;
-}
-
-.credit-offer .options-list .option .price{
-	position:absolute;
-	right:0;
-	top:0;
-	display:none;
-}
 
+/*aside*/
 
-.credit-offer .options-list .option.checked .price{
-	display:block;
-}
+aside{
+    width:230px;
+    background:#252525;
+    position:fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    padding:0;
 
-.credit-offer .options-list .option .price input, .credit-offer  .options-list table input{
-	text-align:right;
-	margin-right:-3px;
-	padding:0 2px 2px 0;
-	border:1px solid #abadb3;
+    color:#eee;
 }
 
-.credit-offer .options-list .option .checkbox input{
-	margin-top: 6px;
-}
 
-.credit-offer .options-list .option.disabled{
-	color:#888;
-}
 
-.credit-offer .options-list .option.disabled label, .credit-offer .options-list .option.disabled .checkbox{
-	cursor:default;
+aside img{
+    padding:10px;
 }
 
 
-.credit-offer {
-	position:relative;
-}
+aside ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
 
-.credit-offer .add-to-compare{
-	position: absolute;
-	bottom: -55px;
-	display: none;
-	width: 200px;
-	margin-left: 30px;
-	
-	
-	-webkit-box-shadow: 3px 4px 10px rgba(50, 50, 50, 0.5);
-	-moz-box-shadow:    3px 4px 10px rgba(50, 50, 50, 0.5);
-	box-shadow:         3px 4px 10px rgba(50, 50, 50, 0.5);
 }
 
-.credit-offers>div:hover .add-to-compare{
-	display:block;
+aside ul li{
+    padding:10px;
 }
 
 
+aside ul li i{
+    display:none;
 
-.offers-comparison{
-	/*width:100%;*/
 }
 
 
-.offers-comparison th, .offers-comparison td{
-	vertical-align:top;
+aside ul li{
+    margin:20px 0 40px 0;
 }
 
-.offers-comparison th{
-	text-align:left;
-	font-weight:normal;
-	font-size:0.8em;
-	
-	
-	
-}
-.offers-comparison tr.group,
-.offers-comparison tr.group th,
-.offers-comparison tr.group td{
-	background:#fff;
 
+aside ul li{
+    border-radius: 10px 0 0 10px;
+    position:relative;
+    cursor: pointer;
 }
 
-.offers-comparison tr.group th{
-	font-weight:bold;
+aside ul li:before, aside ul li:after, aside ul li i{
+    display:block;
+    content: '';
+    width:10px;
 
+    position:absolute;
+    right:0;
 }
 
-.offers-comparison tr.group td{
-	text-align:left;
-}
 
+aside ul li i{
+    top:-10px;
+    bottom:-10px;
+    height:auto;
 
-.offers-comparison th, .offers-comparison td{
-	width:293px;
-	border-bottom:1px solid #ccc;
-	padding:3px 5px;
-	background:rgba(255,255,255,0.7);
 }
-
 
- 
-.offers-comparison tr:last-child>*{
-	border-bottom:0;
-	background:transparent; 
-}
 
-.offers-comparison td{
-	text-align:center;
+aside ul li:before, aside ul li:after{
+    height:10px;
+    z-index:10;
 
 }
 
-.offers-comparison .offer-name td{
-	font-size:1.2em;
-	
-}
 
-.offers-comparison .delete-offer{
-	display: inline-block;
-	width:16px;
-	height:16px;
-	background: url(../img/remove.png) no-repeat 0 0;
-	margin-left:7px;
-	margin-top:-1px;
+aside ul li:before{
+    top:-10px;
+    border-radius: 0 0 10px 0;
 }
 
-.offers-comparison .delete-offer:hover{
-	background-position:0 bottom;
+aside ul li:after{
+    bottom:-10px;
+    border-radius: 0 10px 0 0;
 }
 
-.terms-container>div{
-	border-radius:5px;
-}
 
 
-.terms-container .extra-terms{
-	/*background:rgb(255,253,232);*/
-		background:rgb(255,250,195);
-	border:1px solid #fffac3;
-}
+/*li.hover*/
 
-.terms-container .main-terms{
-	background: rgb(255, 241, 126);
-	border:1px solid #FFCA15;
-}
 
-/* entire container, keeps perspective */
-.flip-container  {
-	perspective: 1000;
+aside ul li:hover, aside ul li:hover i{
+    background: #555;
 }
-
 
-.flip-container .extra-terms{
-       -ms-transform: rotateY(180deg);
-        -webkit-transform: rotateY(180deg);
-        -moz-transform: rotateY(180deg);
-        transform: rotateY(180deg);
 
-}
 
-/* flip the pane when hovered */
-.flip-container.hover .terms-container>div.extra-terms {
-      -webkit-transform: rotateY(360deg);
-      -ms-transform: rotateY(360deg);
-      -moz-transform: rotateY(360deg);
-      transform: rotateY(360deg);
+aside ul li:hover:before, aside ul li:hover:after{
+    background:#252525;
 }
 
 
-/* flip the pane when hovered */
-.flip-container.hover .terms-container>div.main-terms {
-      -webkit-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
-      -moz-transform: rotateY(180deg);
-      transform: rotateY(180deg);
-}
 
 
-.flip-container, .terms-container, .main-terms, .extra-terms {
-	height: 330px;
+/*li.active*/
 
-}
 
-.terms-container{
-	position:relative;
-	
+aside ul li.active, aside ul li.active i{
+    background: #fc0;
+    color:#333;
 }
 
-/* flip speed goes here */
-.terms-container>div {
-	-webkit-transition:all 0.3s linear;
-    -ms-transition:all 0.3s linear;
-    -o-transition:all 0.3s linear;
-    -moz-transition:all 0.3s linear;
-	transition:all 0.3s linear;
-	
-	-webkit-backface-visibility: hidden;
-	-ms-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-}
 
-/* hide back of pane during swap */
-.main-terms, .extra-terms {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width:100%;
-	
-	
-	-webkit-box-shadow: 0px 8px 20px rgba(50, 50, 50, 0.5);
-	-moz-box-shadow:    0px 8px 20px rgba(50, 50, 50, 0.5);
-    -ms-box-shadow:    0px 8px 20px rgba(50, 50, 50, 0.5);
-    -o-box-shadow:    0px 8px 20px rgba(50, 50, 50, 0.5);
-	box-shadow:         0px 8px 20px rgba(50, 50, 50, 0.5);
-	
-
-	
+aside ul li.active:before, aside ul li.active:after{
+    background:#252525;
 }
 
 
-.flip-inner{
-	padding:7px 10px 10px 10px;
-	line-height:160%;
-	width:auto;
-}
 
+/*calculate-sum*/
 
-.flip-inner table{
-	width:100%;
-}
 
-.flip-inner table th{
-	font-weight:normal;
-	text-align:left;
-	color:#888;
-	font-size:12px;
+aside li.calculate-sum dt, aside li.calculate-sum dd{
+    width:105px;
+    font-weight: normal;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
 }
 
-.flip-inner table td{
-	text-align:right;
+aside li.calculate-sum dl{
+    margin:0;
+    font-size:0.8em;
 }
-
 
-.extra-terms table td, .extra-terms table input{
-	font-size:12px;
-}
 
-.extra-terms .options-list{
-	height: 240px;
-}
+aside li.calculate-sum dd{
+    text-align:right;
 
-.extra-terms .options-list table td{
-	white-space:nowrap;
 }
 
-
-a.rotate{
-	display:block;
-	width:30px;
-	height:30px;
-	background:url(../img/rotate.png) no-repeat 0 0;
-	position:absolute;
-	top:5px;
-	right:0;
-}
 
-.control-group table input{
-	margin:0;
-}
 
 
-.control-group table{
-	width:100%;
-	vertical-align:bottom;
-}
 
 
-.control-group td{
-	vertical-align:bottom;
-	white-space:nowrap
-}
 
 
-.control-group td.input{ 
-	width:120px;
-	white-space:nowrap;
-	padding-left:5px;
-	padding-right:10px;
-	text-align:right;
-}
 
-.control-group td.input:last-child{
-	width:60px;
-}
 
 
 
-.filters{
 
-margin:0 -5px;
-padding:10px 5px;
-	background:#f0f0f0;
-	border:1px solid #e8e8e8;
-	-webkit-box-shadow: 0px 5px 12px rgba(50, 50, 50, 0.45);
-	-moz-box-shadow:    0px 5px 12px rgba(50, 50, 50, 0.45);
-	box-shadow:         0px 5px 12px rgba(50, 50, 50, 0.45);
-}
 
 
 
-.control-group .ui-slider-horizontal{
-	margin-top:5px;
-	height:9px;
-	border-radius:5px;
-	border:0;
-	background:url(../img/slider.png) no-repeat top right;
-	
-	-webkit-box-shadow: 0px 5px 12px rgba(50, 50, 50, 0.45);
-	-moz-box-shadow:    0px 5px 12px rgba(50, 50, 50, 0.45);
-	box-shadow:         0px 5px 12px rgba(50, 50, 50, 0.45);
-}
 
-.control-group .ui-slider-horizontal .ui-slider-range{
-	background:url(../img/slider.png) no-repeat bottom right;
-	padding:0;
-}
+.content-container{
+    margin-left:250px;
+    width:710px;
 
 
-.control-group .ui-slider-horizontal a{
-	width:20px;
-	height:20px;
-	margin:-1px 0 0 -10px;
-	padding:0;
-	border:0;
-	
-
-background: url(../img/slider_handler.png) no-repeat
-	
-	
-	
 }
 
-.control-group .ui-slider-horizontal a:focus{
-	outline:0;
-}
 
-.form-inline div select{
-	width:100%;
-}
 
- }
 
-select option:checked, select option[selected]{
-	background:#f00 !important;
-	-webkit-appearance: none;
-}
 
-/*
-.filters{
-	background: rgba(255,255,255,0.8);
-	padding: 5px 0;
 
-}
 
-.filters div:first-child{
-	padding-left:10px;
+.price-line{
+    position: relative;
 }
 
 
-.filters div:last-child{
-	padding-right:10px;
-}
-*/
+.price-line .price{
+    background:#fc0;
+    font-size:2em;
+    font-weight: 300;
+    padding:0 0.2em;
+    position:absolute;
+    right:0;
+    top:0;
 
 
-.navbar-inverse .navbar-inner{
-	background:rgba(0,0,0,0.65);
 }
-
 
-.navbar .container .buttons{
-	float:right;
-	margin-top:5px;
-}
 
 
-.btn i{
-	margin-top: 3px;
+a.radio-btn{
+    font-size:1.5em;
+    font-weight: 300;
+    padding:0 0.2em;
+    display:inline-block;
+    color:#000;
 }
-
-
-/*btn.*/
 
-.btn-group{
-
-
+a.radio-btn:hover{
+    background: rgba(255, 200, 0, 0.23);
 }
 
-.btn-group>.btn {
-	background:transparent;
-	border:0;
-	margin: 1px 6px 2px;
-	padding: 3px 6px;
-	background: url("../img/border-bottom.gif") 50% 100% repeat-x;
-	color: #001c8f;
-	font-size: 14px;
-	font-weight: bold;
-	
+a.radio-btn.active{
+    background:#fc0;
+    text-decoration: none;
 }
-
-.btn-group>.btn.active{
-
-		
-background: #0024b7; /* Old browsers */
-background: -moz-linear-gradient(top,  #0024b7 0%, #8b98c6 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0024b7), color-stop(100%,#8b98c6)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #0024b7 0%,#8b98c6 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #0024b7 0%,#8b98c6 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #0024b7 0%,#8b98c6 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #0024b7 0%,#8b98c6 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0024b7', endColorstr='#8b98c6',GradientType=0 ); /* IE6-9 */
-
-	border:1px solid #25698a;
-	border-color:#25698a #358fb5 #409fc7 #1e6a90;
-	border-radius:2px !important;
-	-webkit-border-radius:2px !important;
-	
-	color:#fff;
-	
-	
-	text-shadow:none;
-
-} 
-
-
-
-
-
-
-
-
-
-
-
-
