--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,12 @@ aside li.calculate-sum dt, aside li.calculate-sum dd{
 
 aside li.calculate-sum dl{
     margin:0;
-    font-size:0.9em;
+    font-size:0;
 }
 
+aside li.calculate-sum dl *{
+    font-size:13px;
+}
 
 aside li.calculate-sum dd{
     text-align:right;
@@ -166,6 +169,7 @@ aside li.calculate-sum dd{
     margin-left:250px;
     width:710px;
 
+    padding-bottom:3em;
 
 }
 
@@ -177,6 +181,7 @@ aside li.calculate-sum dd{
 
 .price-line{
     position: relative;
+    margin-bottom:2em;
 }
 
 
@@ -194,25 +199,35 @@ aside li.calculate-sum dd{
 
 
 
-a.radio-btn{
-    font-size:1.5em;
+.radio-btn{
+    font-size:1.3em;
     font-weight: 300;
+    margin:0;
     padding:0 0.2em;
     display:inline-block;
     color:#000;
 }
 
-a.radio-btn:hover{
+label.radio-btn input{
+    display:none;
+
+}
+
+
+.radio-btn:hover{
     background: rgba(255, 200, 0, 0.25);
 }
 
-a.radio-btn.active{
+.radio-btn.active{
     background:#fc0;
     text-decoration: none;
 }
 
+
+
 div.title{
     position: relative;
+    margin-bottom:1em;
 
 }
 
@@ -237,18 +252,24 @@ ul.row-fluid{
     margin-left:0;
 }
 
+.list{
+    margin-bottom: 1em;
+}
 
-.list>ul>li{
+.list ul{
+    margin: 0;
+    list-style: none;
+}
+
+.list ul li{
     background:#EAE9DA;
     border:1px solid #BEB78F;
     padding:5px 0;
     text-align:center;
-
-
 }
 
 
-.list>ul>li:hover{
+.list ul li:hover{
     background: rgba(255, 200, 0, 0.25);
 }
 
@@ -260,4 +281,27 @@ h4{
 
 .row-fluid select{
     width:100%;
+}
+
+
+select{
+    border:1px solid #BEB78F;
+    border-radius: 0;
+}
+
+
+
+
+.btn-big{
+    font-size:2em;
+    padding:1em 1em;
+    color:#000 !important;
+    background:#fc0;
+    display:block;
+    margin:0 auto;
+    width:33%;
+    text-align: center;
+    font-weight: 300;
+
+
 }
